# vibe-coding-controller-gateway

./: .gitignore  ANDROID_OUTPUT_ADAPTER.md  API_README.md  API文档.md  README.md  opencode_api.py  pyproject.toml  run_api_unit_tests.py  start_api.bat  test_api_simple.py  test_full.py  使用指南.md
src/openremote/: __init__.py  api.py  cli.py
test_reports/: api_unit_report.json  api_unit_report.md
tests/: test_api_gateway.py
