[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openremote"
version = "1.1.0"
description = "Opencode API Gateway - HTTP API 网关，将 opencode CLI 封装为 RESTful 服务"
readme = "API_README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Opencode Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/anomalyco/opencode"
Issues = "https://github.com/anomalyco/opencode/issues"

[project.scripts]
ocr = "openremote.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
